2014-03-20 Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.11.

	* README, USAGE, configure.ac: Updated for release 4.0.11.

	* lib/Foomatic/DB.pm: Do not interpret option default values set to
	  "0" in PPD files as no default setting defined. Thanks to Deng
	  Pang from Ricoh (DengPang at rst dot ricoh dot com) for the report.

2014-02-18 Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.10.

	* README, USAGE, configure.ac: Updated for release 4.0.10.

2014-01-02 Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-addpjloptions.in: Make foomatic-addpjloptions work with
	  the system's Foomatic database, too.

2013-03-11 Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.9.

	* README, USAGE, configure.ac: Updated for release 4.0.9.

	* lib/Foomatic/DB.pm: Error out when initializing the DB object
	  without any form of a Foomatic database being present, made
	  the getpage() method a normal, object-independent function as
	  it does not need a Foomatic database.

	* foomatic-configure.in, foomatic-printjob.in: Updated to use
	  getpage() as a normal function, fixed CUPS check, made
	  foomatic-printjob working without presence of a Foomatic
	  database.

2011-07-25  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.8.

	* README, USAGE, configure.ac: Updated for release 4.0.8.

2011-06-30  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/PPD.pm: Improved printer entry searh algorithm
	  (find_printer() method) in two points:
	   1. Score match of only make and model in printer ID of the entry
	      higher than match of make and model fields of the entry but
	      lower than match of full printer ID. This raises the relevance
	      of printer ID matches if the search term contains only a partial
	      device ID consisting of only the make and model fields.
	   2. Score a printer entry with an actual printer XML file 1 point