@@ -1,3 +1,9 @@
+2014-08-22 Till Kamppeter <till.kamppeter@gmail.com>
+
+	* foomatic-ppd-to-xml.in: Let missing XML files be added when to a
+	  PPD with already existing XML files new "*Product:" lines get
+	  added.
+
 2014-03-20 Till Kamppeter <till.kamppeter@gmail.com>
 
 	* Tagged branch for release 4.0.11.
